fix button width too large

--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -45,7 +45,7 @@
   background-color: #f7e270;
   border-width: 0;
   border-radius: 100vh;
-  width: 16vh;
+  min-width: 15rem !important;
   height: 4vh;
   font-size: 14;
   font-weight: bold;
