--- a/src/theme/custom.scss
+++ b/src/theme/custom.scss
@@ -1,8 +1,7 @@
 .btn {
   border-width: 0;
   border-radius: 100vh;
-  padding: 0;
-  width: 15rem;
+  padding: 0 2rem;
   height: 3rem;
   font-size: 20;
   font-weight: bold;
